--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "nes-react": "1.0.2",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
