--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "plop": "plop"
+    "plop": "plop",
+    "test": "jest",
+    "test:watch": "jest --watch --coverage",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "nes-react": "1.0.2",
@@ -15,6 +18,12 @@
     "react-dom": "16.14.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "babel-jest": "26.3.0",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "jest": "26.4.2",
     "plop": "2.7.4"
   }
 }
