--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "7.11.5",
+    "@babel/preset-flow": "7.12.1",
     "@babel/preset-react": "7.10.4",
     "babel-jest": "26.3.0",
     "enzyme": "3.11.0",
