--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.5.0",
     "nes-react": "1.0.2",
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "react-redux": "7.2.2"
   },
   "devDependencies": {
     "@babel/preset-env": "7.11.5",
